--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Inferno App</title>
+    <title>Leading Competitions Australia</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body ontouchstart="">
+    <div id="app" class="app-container"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
