--- a/public/index.html
+++ b/public/index.html
@@ -27,5 +27,32 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+    <div class="HowItWorks">
+        <h3>How It Works</h3>
+        <div class="HowItWorks-inner">
+            <div class="HowItWorks-group">
+                <div class="HowItWorks-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30.6 33.37" class="HowItWorks-svg"><path d="M24.8,33.37H5.8c-3.46,0-5.8-2.11-5.8-5.63,0-4.91,1.15-12.45,7.52-12.45.67,0,3.52,3,7.78,3s7.11-3,7.78-3c6.37,0,7.52,7.54,7.52,12.45C30.63,31.26,28.28,33.37,24.8,33.37ZM15.3,16.68a8.34,8.34,0,1,1,8.34-8.34h0a8.35,8.35,0,0,1-8.31,8.34Z" class="HowItWorks-svg-fill"></path></svg></div>
+                <p>Fast &amp; Easy Registration<br>It's 100% Free.</p>
+            </div>
+            <div class="HowItWorks-group">
+                <div class="HowItWorks-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 37.74 28.25" class="HowItWorks-svg"><circle cx="5.4" cy="18.38" r="1.3"></circle><circle cx="5.46" cy="12" r="1.3"></circle><circle cx="5.46" cy="5.63" r="1.3"></circle><path d="M36.09,0H1.66A1.66,1.66,0,0,0,0,1.66V24.39a1.65,1.65,0,0,0,.48,1.17C1,26,4.19,31,18.83,26s18.91,2.79,18.91,1.88V1.66A1.66,1.66,0,0,0,36.09,0ZM5.4,20.38a2,2,0,1,1,2-2A2,2,0,0,1,5.4,20.38ZM5.46,14a2,2,0,1,1,2-2A2,2,0,0,1,5.46,14Zm0-6.38a2,2,0,1,1,2-2A2,2,0,0,1,5.46,7.62Zm28,11.51H10.15a.75.75,0,1,1,0-1.5H33.47a.75.75,0,0,1,0,1.5Zm.05-6.38H10.21a.75.75,0,1,1,0-1.5H33.53a.75.75,0,0,1,0,1.5Zm0-6.38H10.21a.75.75,0,1,1,0-1.5H33.53a.75.75,0,0,1,0,1.5Z" class="HowItWorks-svg-fill"></path></svg></div>
+                <p>Complete Paid Surveys<br>&amp; Offers Online.</p>
+            </div>
+            <div class="HowItWorks-group">
+                <div class="HowItWorks-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 38.19" class="HowItWorks-svg"><path d="M21.45,1.21,23.8,14a1.47,1.47,0,0,0,1.64,1.19l12.89-1.71a1.47,1.47,0,0,1,.89,2.75L27.79,22.41a1.47,1.47,0,0,0-.63,1.93l5.61,11.73a1.47,1.47,0,0,1-2.34,1.7l-9.42-9a1.47,1.47,0,0,0-2,0l-9.42,9a1.47,1.47,0,0,1-2.34-1.7l5.61-11.73a1.47,1.47,0,0,0-.63-1.93L.78,16.22a1.47,1.47,0,0,1,.89-2.75l12.89,1.71A1.47,1.47,0,0,0,16.2,14L18.55,1.21A1.47,1.47,0,0,1,21.45,1.21Z" class="HowItWorks-svg-fill"></path></svg></div>
+                <p>Earn Points &amp; Entries<br>for Gift Vouchers.</p>
+            </div>
+        </div>
+    </div>
+    <div class="Benefits">
+        <h3>Benefits</h3>
+        <div class="Benefits-inner">
+            <ul>
+                <li>Access only the best and legitimate survey comanies available in Australia.</li>
+                <li>Free to register and you can opt-out any time.</li>
+                <li>Use your spare time for market research and receive enteries for great prizes.</li>
+            </ul>
+        </div>
+    </div>
   </body>
 </html>
